--- a/dist.ini
+++ b/dist.ini
@@ -1,3 +1,9 @@
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
 version=0.002
 
 name=Acme-CPANModules-RandomData
@@ -5,9 +11,10 @@ name=Acme-CPANModules-RandomData
 [Acme::CPANModules]
 
 [@Author::PERLANCAR]
-:version=0.604
+:version=0.606
 
 [Prereqs]
+alias::module=0
 strict=0
 Acme::CPANModulesUtil::Misc=0
 
